# improvement-axiom

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  package.json  pyproject.toml  requirements.txt  resonance-alignment-framework.skill
chrome-extension/: README.md  background.js  content.css  content.js  generate-icons.html  generate_icons.py  manifest.json  popup.html  popup.js
docs/: axiom-vs-christ-aligned-comparison.md  framework-overview-and-testing.md  skill-analysis.md
personas/: gamer_kid.yaml  late_bloomer.yaml  passive_viewer.yaml
prompts/: README.md  arete-long.md  arete-short.md  evaluation.md
resonance-alignment-framework/: SKILL.md
scenarios/: adversarial_classification_drift.yaml  adversarial_encoding_evasion.yaml  adversarial_evidence_passivity.yaml  adversarial_faker.yaml  adversarial_jailbreak.yaml  adversarial_multiturn_escalation.yaml  adversarial_philosophical.yaml  adversarial_social_engineering.yaml  adversarial_wireheader.yaml  adversarial_wireheading_enthusiasm.yaml  gamer_to_developer.yaml  late_bloomer.yaml  local_craftsman.yaml  niche_artist.yaml  passive_consumer.yaml
scripts/: prompts-push.js  prompts-push.ts
src/resonance_alignment/: __init__.py  config.py  system.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_twitter_agent.sql  002_system_prompts.sql
tests/: adversarial_live.py  adversarial_report.md  conftest.py
tests/test_agent/: test_opus_integration.py
tests/test_core/: test_evidence.py  test_extrapolation_model.py  test_intention_classifier.py  (+7 more)
(+49 files in other folders)
