[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-alignment-framework"
version = "0.4.0"
description = "Resonance-based AI alignment framework using quality-intention matrix and Ouroboros cycle principles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
]
agent = [
    "anthropic>=0.40.0",
]
supabase = [
    "supabase>=2.0.0",
]
dotenv = [
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/yourusername/resonance-alignment-framework"
Issues = "https://github.com/yourusername/resonance-alignment-framework/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: live API integration tests (require ANTHROPIC_API_KEY)",
    "slow: tests that take significant time to run",
]

[tool.ruff]
line-length = 100
target-version = "py310"
